fixed inline layout bug

--- a/Item/Item.module.less
+++ b/Item/Item.module.less
@@ -123,7 +123,7 @@
 			.itemContent,
 			.content {
 				flex-shrink: 1;
-				overflow: auto;
+				overflow: hidden;
 			}
 		}
 
